--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,20 @@
 @charset "UTF-8";
 
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.flex-container .card {
+  text-align: center;
+  width: 20%;
+  height: auto;
+  padding: 2rem;
+  margin: 1rem;
+}
+
 /*!
  * Bootstrap  v5.2.1 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
