--- a/resources/sass/_main-content.scss
+++ b/resources/sass/_main-content.scss
@@ -1,18 +1,27 @@
 
-.flex-container{
+main{
+    background-color: black;
+    .flex-container{
+    
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin: 0 auto;
+    
+        .card{
+           text-align: center;
+           width: 20%;
+           height: auto;
+           padding: 2rem;
+           margin: 1rem;
 
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin: 0 auto;
+           
 
-    .card{
-       text-align: center;
-       width: 20%;
-       height: auto;
-       padding: 2rem;
-       margin: 1rem;
+        } 
+    
     }
-
 }
+
+
+
 
